Fix deck name overflow

--- a/src/apps/deck-builder/app/components/deck-pane/deck-pane.css
+++ b/src/apps/deck-builder/app/components/deck-pane/deck-pane.css
@@ -16,6 +16,13 @@
 	grid-auto-flow: column;
 	justify-content: space-between;
 	align-items: center;
+	grid-template-columns: 1fr max-content;
+	gap: 8px;
+}
+
+.deck-name {
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .cards-quantity {
